fix: wrong font size for chef name in big-screen media

--- a/assets/styles/base-style.css
+++ b/assets/styles/base-style.css
@@ -352,8 +352,8 @@ footer > p {
 
 .profile-name {
   font-weight: 300;
-  font-size: 1.5em;
   color: #e1c8ff;
+  margin: 0.5em auto;
 }
 
 .kitchen-deco {
