--- a/assets/styles/big-screen.css
+++ b/assets/styles/big-screen.css
@@ -64,6 +64,7 @@ footer > img {
 }
 
 .profile-name {
+  font-size: 1.2em;
   margin: 0.5em auto 1em;
 }
 
